results/SpecGenBench/2-shot/log-Return100-2023_11_28_02_50_29.txt
public class Return100 {
    //@ ensures \result == 100;
    public static int return100 () {
        int res = 0;
        //@ maintaining res == (\old(res) + i);
        //@ maintaining 0 <= i && i <= 100;
        //@ decreases 100 - i;
        for(int i = 0; i < 100; i++) {
            res = res + 1;
        }
        return res;
    }
}
/home/max/Documents/JMLGPT/tmp/Return100.java:5: error: cannot find symbol
        //@ maintaining res == (\old(res) + i);
                                     ^
  symbol:   variable res
  location: class Return100
1 error

